# B2B-OrderFlow

./: .env.example  .gitignore  README.md
backend/api/: .env.example  .gitignore  pyproject.toml
backend/api/app/: llm.py  main.py  schemas.py
backend/functions/generate-order-excel/: index.ts
backend/functions/send-push/: index.ts
database/migrations/: 001_core.sql  002_catalog.sql  003_orders.sql  004_update_requests.sql  005_storage.sql  006_order_lines_ratio.sql  007_device_tokens.sql  008_push_notification_queue.sql  009_push_dedupe.sql  010_push_update_requests.sql  011_order_code_sequence.sql  012_catalog_categories.sql
database/policies/: 001_rls.sql  002_storage_rls.sql
database/seeds/: dev_seed.sql  dev_seed_minimal.sql
frontend/: .env.example  pubspec.yaml  vercel_build.sh
frontend/android/: gradle.properties
frontend/android/app/: build.gradle.kts
frontend/lib/: main.dart
frontend/lib/app/: app.dart  app_bootstrap.dart  go_router_refresh.dart  router.dart
frontend/lib/app/theme/: app_button_styles.dart  app_colors.dart  app_spacing.dart  app_theme.dart
frontend/lib/core/config/: app_env.dart  supabase_bootstrap.dart  supabase_ready_provider.dart
frontend/lib/core/constants/: brand_assets.dart
frontend/lib/shared/: date_input.dart  order_date_labels.dart  search_prefix_match.dart  supabase_instant.dart
frontend/test/: widget_test.dart
frontend/tools/: generate_icons.py
frontend/web/: index.html  manifest.json
prodocs/: DesignSystem.md  PRD.md  Plan.md  Progress.md  Roadmap.md  tech-stack.md
(+83 files in other folders)
