[project]
name = "textileflow-api"
version = "0.1.0"
description = "TextileFlow demo — Gemini destekli sipariş notu / güncelleme talebi asistanı (FastAPI)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-genai>=0.3.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
